# AstralRenderer

./: ARCHITECTURE.md  CMakeLists.txt  PLAN.md  README.md  ROADMAP.md  app_log.txt  app_log_bloom.txt  app_log_fix.txt  app_log_post.txt  app_log_shadow_refine.txt  imgui.ini  roadmap_06.01.md  roadmap_v2.md
assets/models/damaged_helmet/: license.txt  scene.gltf
assets/shaders/: brdf_lut.comp  cull.comp  equirect_to_cube.comp  irradiance.comp  prefilter.comp  skybox.frag  skybox.vert
include/astral/: astral.hpp
include/astral/core/: commands.hpp  context.hpp
include/astral/platform/: window.hpp
include/astral/renderer/: camera.hpp  compute_pipeline.hpp  descriptor_manager.hpp  environment_manager.hpp  gltf_loader.hpp  model.hpp  pipeline.hpp  render_graph.hpp  scene_data.hpp  scene_manager.hpp  swapchain.hpp  sync.hpp  ui_manager.hpp
include/astral/resources/: buffer.hpp  image.hpp  shader.hpp
shaders/: bloom.frag  bloom.frag.spv  composite.frag  composite.frag.spv  fxaa.frag  fxaa.frag.spv  pbr.frag  pbr.frag.spv  pbr.vert  pbr.vert.spv  post_process.vert  post_process.vert.spv  shadow.frag  shadow.vert  shadow.vert.spv  ssao.frag  ssao.frag.spv  ssao_blur.frag  ssao_blur.frag.spv
src/: main.cpp
src/core/: commands.cpp  context.cpp
src/platform/: window.cpp
src/renderer/: camera.cpp  compute_pipeline.cpp  descriptor_manager.cpp  environment_manager.cpp  gltf_loader.cpp  model.cpp  pipeline.cpp  render_graph.cpp  scene_manager.cpp  swapchain.cpp  sync.cpp  ui_manager.cpp
src/resources/: buffer.cpp  image.cpp  shader.cpp
